fix: Align search bar in the date-list container (#2383)

--- a/src/backend/_scss/application.scss
+++ b/src/backend/_scss/application.scss
@@ -2469,3 +2469,14 @@ a.skip:hover {
     display: none;
   }
 }
+
+.date-list-search-filter {
+
+  label {
+    display: inline;
+
+    .fa {
+      margin-top: 13px;
+    }
+  }
+}
